--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 
+## Hi there, I'm Janardhan Ravada
+
+<p align="center">
+<img width="20%" src="https://img.icons8.com/ios-filled/96/000000/programming.png"/>
+</p>
+
+
+- I'm ** Full Stack Developer** | **Algo Expert ** 
+- Currently I am doing my masters from BITS throguh WILP
+
+
+### Programming Languages....
+
+<p align="center">
+	<img width="10%" style="padding:5px" src="https://img.icons8.com/color/144/000000/java-coffee-cup-logo.png"/>
+	<img width="10%" style="padding:5px" src="https://img.icons8.com/color/144/000000/javascript.png"/>
+</p>
