--- a/index.html
+++ b/index.html
@@ -1,18 +1,167 @@
+<html>
 
-## Hi there, I'm Janardhan Ravada
+<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<p align="center">
-<img width="20%" src="https://img.icons8.com/ios-filled/96/000000/programming.png"/>
-</p>
-
-
-- I'm ** Full Stack Developer** | **Algo Expert ** 
-- Currently I am doing my masters from BITS throguh WILP
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
 
 
-### Programming Languages....
+<style type="text/css">
+    
+img {
+    width: 100%;
+    height: 100%;
+}
 
-<p align="center">
-	<img width="10%" style="padding:5px" src="https://img.icons8.com/color/144/000000/java-coffee-cup-logo.png"/>
-	<img width="10%" style="padding:5px" src="https://img.icons8.com/color/144/000000/javascript.png"/>
-</p>
+.bg-black {
+    background: #000
+}
+
+.skill-block {
+    width: 30%
+}
+
+@media (min-width: 991px) and (max-width:1200px) {
+    .skill-block {
+        padding: 32px !important
+    }
+}
+
+@media (min-width: 1200px) {
+    .skill-block {
+        padding: 56px !important
+    }
+}
+
+body {
+    background-color: #eeeeee
+}
+</style>
+
+<body>
+    
+<div class="container mt-5 mb-5">
+    <div class="row no-gutters">
+        <div class="col-md-4 col-lg-4"><img src="https://avatars.githubusercontent.com/janardhan-ravada"></div>
+        <div class="col-md-8 col-lg-8">
+            <div class="d-flex flex-column">
+                <div class="d-flex flex-row justify-content-between align-items-center p-5 bg-dark text-white">
+                    <h3 class="display-5">Janardhan Ravada</h3>
+                    <i class="fa fa-facebook"></i>
+                    <i class="fa fa-google"></i>
+                    <i class="fa fa-linkedin"></i>
+                </div>
+                <div class="p-3 bg-black text-white">
+                    <h6>Full Stack Developer</h6>
+                </div>
+                <div class="d-flex flex-row text-white">
+                    <div class="p-4 bg-primary text-center skill-block">
+                        <h4>80%</h4>
+                        <h6>Java</h6>
+                    </div>
+                    <div class="p-3 bg-success text-center skill-block">
+                        <h4>80%</h4>
+                        <h6>JavaScript</h6>
+                    </div>
+                    <div class="p-3 bg-warning text-center skill-block">
+                        <h4>80%</h4>
+                        <h6>HTML</h6>
+                    </div>
+                    <div class="p-3 bg-danger text-center skill-block">
+                        <h4>75%</h4>
+                        <h6>CSS</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <h3>Work Experience </h3>
+
+        <table class="table table-borderless table-dark">
+  <thead>
+    <tr>
+      <th scope="col">Organisation</th>
+      <th scope="col">Designation</th>
+      <th scope="col">From</th>
+      <th scope="col">To</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">Areteans Technologies limited</th>
+      <td>Lead Consultant - UI</td>
+      <td>19-02-2021</td>
+      <td>Till now...</td>
+    </tr>
+    <tr>
+      <th scope="row">Pegasystems India PVT LTD/th>
+      <td>Principal Software Engineer</td>
+      <td>05-12-2016</td>
+      <td>18-02-2021</td>
+    </tr>
+    <tr>
+      <th scope="row">CDK Global India PVT LTD</th>
+      <td>Senior Member Technical</td>
+      <td>23-06-2014</td>
+      <td>02-12-2016</td>
+    </tr>
+     <tr>
+      <th scope="row">Infosts LTD</th>
+      <td>Senior Systems Engineer</td>
+      <td>14-03-2011</td>
+      <td>20-06-2014</td>
+    </tr>
+  </tbody>
+</table> 
+
+
+<h3>Education </h3>
+
+<table class="table table-borderless table-dark">
+  <thead>
+    <tr>
+      <th scope="col">Degree</th>
+      <th scope="col">Institute</th>
+      <th scope="col">Duration</th>
+      <th scope="col">Percentage</th>
+      <th scope="col">Class</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">M.Tech</th>
+      <td>BITS, Hyderabad</td>
+      <td>2020-2022</td>
+      <td>..</td>
+      <td>..</td>
+    </tr>
+    <tr>
+       <th scope="row">B.Tech</th>
+      <td>GMRIT, Rajam, Srikakulam</td>
+      <td>2006-2010</td>
+      <td>69.4</td>
+      <td>First</td>
+    </tr>
+    <tr>
+      <th scope="row">Intermediate</th>
+      <td>Sri Chaitanya Jr.College, Visakhapatnam</td>
+      <td>2004-2006</td>
+      <td>95.5</td>
+      <td>First</td>
+    </tr>
+     <tr>
+      <th scope="row">SSC</th>
+      <td>Sri Narayana Residential School, Srikakulam</td>
+      <td>2003-2004</td>
+      <td>92.6</td>
+      <td>First</td>
+    </tr>
+  </tbody>
+</table>   
+    </div>
+</div> 
+
+</body>
+
+</html>
