--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@ body {
             <div class="d-flex flex-column">
                 <div class="d-flex flex-row justify-content-between align-items-center p-5 bg-dark text-white">
                     <h3 class="display-5">Janardhan Ravada</h3>
-                    <i class="fa fa-facebook"></i>
-                    <i class="fa fa-google"></i>
-                    <i class="fa fa-linkedin"></i>
+                    <a href="https://www.facebook.com/janardhan.ravada"><i class="fa fa-facebook"></i></a>
+                    <a href="mailto:janardhan.ravada@gmail.com"><i class="fa fa-google"></i></a>
+                    <a href="https://www.linkedin.com/in/janardhanravada/"><i class="fa fa-linkedin"></i></a>
                 </div>
                 <div class="p-3 bg-black text-white">
                     <h6>Full Stack Developer</h6>
