--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ body {
       <td>Till now...</td>
     </tr>
     <tr>
-      <th scope="row">Pegasystems India PVT LTD/th>
+      <th scope="row">Pegasystems India PVT LTD</th>
       <td>Principal Software Engineer</td>
       <td>05-12-2016</td>
       <td>18-02-2021</td>
