--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ body {
       <td>02-12-2016</td>
     </tr>
      <tr>
-      <th scope="row">Infosts LTD</th>
+      <th scope="row">Infosys LTD</th>
       <td>Senior Systems Engineer</td>
       <td>14-03-2011</td>
       <td>20-06-2014</td>
